gen/oauth/v2/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-oauth2 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/oauth/v2/lib)
error[E0423]: expected value, found struct `v_2::V2Actions`
   --> gen/oauth/v2/lib/src/lib.rs:290:13
    |
290 |             v_2::V2Actions
    |             ^^^^^^^^^^^^^^ did you mean `v_2::V2Actions { /* fields */ }`?

error[E0423]: expected value, found struct `me::MeActions`
   --> gen/oauth/v2/lib/src/lib.rs:399:17
    |
399 |                 me::MeActions
    |                 ^^^^^^^^^^^^^ did you mean `me::MeActions { /* fields */ }`?

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-oauth2`.

To learn more, run the command again with --verbose.
